# LSO_Baldini

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Makefile.am  MyServerLog2.txt  README.md  TigreLog.txt  cl1test.sh  client.sh  client1.sh  client2.sh  client3.sh  client4.sh  client_output.txt  clienttest.sh  config.txt  configure.ac  main.elf  makefilelog.txt  server.sh  server_output.txt  server_settings_rules.txt  test.sh  test1.sh  test1_server_settings.txt  test2.sh  test2_server_settings.txt  test_errors.txt  testoutput.txt  testoutput_client.txt  testoutput_server.txt  testtext.txt  testtext2.txt  valgrind.sh
BETA/: Makefile  testoutput.txt
BETA/include/: client.h  dir_utils.h  file_utils.h  hash_utils.h  list_utils.h  mem_utils.h  poll_utils.h  server.h  server_message.h  serverapi.h  string_utils.h
BETA/src/: client.c  dir_utils.c  file_utils.c  hash_utils.c  list_utils.c  mem_utils.c  poll_utils.c  server.c  serverapi.c  string_utils.c  tester.c
TEST/: CMakeLists.txt  Makefile  run.sh
TEST/include/: client.h  common_utils.h  error_utils.h  list_utils.h  mem_utils.h  print_utils.h  ptr_utils.h  server.h  sys_utils.h  thread_utils.h
TEST/src/: client.c  list_utils.c  main.c  ptr_utils.c  server.c  sys_utils.c  thread_utils.c
include/: client.h  client_queue.h  common.h  commonio.h  cond_utils.h  dir_utils.h  error_utils.h  errors.h  file_utils.h  hash_utils.h  list_utils.h  lock_utils.h  locks.h  poll_utils.h  procs.h  server.h  server_common.h  server_fs.h  server_message.h  server_paged_fs.h  server_utils.h  serverapi.h  socket_queue.h  sockets.h  string_utils.h  strings.h
libs/LSO_LIB/: CMakeLists.txt  Makefile  array_utils.c  array_utils.h  common_utils.h  error_utils.h  file_utils.c  file_utils.h  hash_utils.c  hash_utils.h  list_utils.c  list_utils.h  mem_utils.c  mem_utils.h  string_utils.c  string_utils.h  test_errors.txt  tester.c  thread_utils.c  thread_utils.h
src/: client.c  client_queue.c  common.c  commonio.c  dir_utils.c  file_utils.c  hash_utils.c  list_utils.c  main.c  mem_utils.c  poll_utils.c  server.c  server_fs.c  server_paged_fs.c  server_utils.c  serverapi.c  socket_queue.c  sockets.c  string_utils.c  strings.c  tester.c
to_write/: autogen.sh  file_94.txt
